--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-    <a href="https://github.com/Bachittarjeet/Hacker-Bootstrap-Template/"><img style="position: absolute; top: 0; left: 0; border: 0;z-index:1001;" src="img/fork.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/Dwight123-crypto"><img style="position: absolute; top: 0; left: 0; border: 0;z-index:1001;" src="https://www.svgrepo.com/show/14071/search.svg" alt="Find me on GitHub"></a>
 
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
@@ -38,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Hacker Bootstrap Theme</a>
+                <a class="navbar-brand" href="#">Dwight123-crypto</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
