--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
   
-  <title>Title page</title>  
+  <title>Home</title>  
 
 <link href="./main.3da94fde.css" rel="stylesheet"></head>
 
@@ -77,9 +77,8 @@
       <div class="col-xs-12 col-md-7 col-md-offset-1">
         <div class="hero-full-wrapper">
           <div class="text-content">
-            <h1>James Torres</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h1>Dwight123-crypto</h1>
+            <p>👋 Hi, I’m @Dwight123-crypto</p>
           </div>
         </div>
       </div>
