modified:   index.html

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <div class="col-xs-12 col-md-7 col-md-offset-1">
         <div class="hero-full-wrapper">
           <div class="text-content">
-            <h1>Dwight123-crypto</h1>
-            <p>👋 Hi, I’m @Dwight123-crypto</p>
+            <h1>Kon'nichiwa</h1>
+            <p>👋 I’m Russel</p>
           </div>
         </div>
       </div>
